--- a/src/tests/demo.ipynb
+++ b/src/tests/demo.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
        "  'exit2'])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
        "   'exit2'])]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,28 +316,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "('E<> Monitor0.pass',\n",
-       " ['input_ball',\n",
-       "  'input_ball',\n",
-       "  'hidden_path1',\n",
-       "  'hidden_path3',\n",
-       "  'exit1',\n",
-       "  'input_ball',\n",
-       "  'input_ball',\n",
-       "  'hidden_path1',\n",
-       "  'hidden_path4',\n",
-       "  'exit2'])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "Verifyta path is not set. Please use \"Verifyta().set_verifyta_path(verifyta_path: str)\" to set the path of verifyta.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\22215\\OneDrive\\Coding\\Github\\pyuppaal\\src\\tests\\demo.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 12>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/22215/OneDrive/Coding/Github/pyuppaal/src/tests/demo.ipynb#X13sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m observe_actions \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mexit1\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mexit2\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mexit3\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/22215/OneDrive/Coding/Github/pyuppaal/src/tests/demo.ipynb#X13sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m focused_actions \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mset\u001b[39m(hidden_actions\u001b[39m+\u001b[39minput_actions\u001b[39m+\u001b[39mobserve_actions))\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/22215/OneDrive/Coding/Github/pyuppaal/src/tests/demo.ipynb#X13sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m pyu\u001b[39m.\u001b[39;49mfind_a_pattern(model_path, inputs, observations, observe_actions\u001b[39m=\u001b[39;49mobserve_actions, focused_actions\u001b[39m=\u001b[39;49m\u001b[39mNone\u001b[39;49;00m, hold\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/22215/OneDrive/Coding/Github/pyuppaal/src/tests/demo.ipynb#X13sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m pyu\u001b[39m.\u001b[39mfind_all_patterns(model_path,inputs, observations, observe_actions\u001b[39m=\u001b[39mobserve_actions, hold\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, max_patterns \u001b[39m=\u001b[39m \u001b[39m2\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\pyuppaal\\pyuppaal.py:116\u001b[0m, in \u001b[0;36mfind_a_pattern\u001b[1;34m(model_path, inputs, observes, observe_actions, focused_actions, hold, options)\u001b[0m\n\u001b[0;32m    105\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    106\u001b[0m \u001b[39m:param str model_path: path to the model file\u001b[39;00m\n\u001b[0;32m    107\u001b[0m \u001b[39m:param TimedActions inputs: TimedActions of input signal model\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    113\u001b[0m \u001b[39m:return: query, pattern_seq.actions @yhc SimTrace？\u001b[39;00m\n\u001b[0;32m    114\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    115\u001b[0m u \u001b[39m=\u001b[39m UModel(model_path)\n\u001b[1;32m--> 116\u001b[0m \u001b[39mreturn\u001b[39;00m u\u001b[39m.\u001b[39;49mfind_a_pattern(inputs, observes, observe_actions, focused_actions, hold, options)\n",
+      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\pyuppaal\\umodel.py:390\u001b[0m, in \u001b[0;36mUModel.find_a_pattern\u001b[1;34m(self, inputs, observes, observe_actions, focused_actions, hold, options)\u001b[0m\n\u001b[0;32m    388\u001b[0m new_umodel\u001b[39m.\u001b[39msave()\n\u001b[0;32m    389\u001b[0m \u001b[39m# 获取第0个pattern\u001b[39;00m\n\u001b[1;32m--> 390\u001b[0m Verifyta()\u001b[39m.\u001b[39;49msimple_verify(new_model_path, options\u001b[39m=\u001b[39;49moptions)\n\u001b[0;32m    391\u001b[0m trace_path \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39msplitext(new_model_path)[\u001b[39m0\u001b[39m] \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m-1.xtr\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m    392\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mexists(trace_path):\n",
+      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\pyuppaal\\verifyta.py:27\u001b[0m, in \u001b[0;36mcheck_is_verifyta_path_empty.<locals>.checker_wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     25\u001b[0m error_info \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mVerifyta path is not set.\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     26\u001b[0m error_info \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m Please use \u001b[39m\u001b[39m\"\u001b[39m\u001b[39mVerifyta().set_verifyta_path(verifyta_path: str)\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m to set the path of verifyta.\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m---> 27\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(error_info)\n",
+      "\u001b[1;31mValueError\u001b[0m: Verifyta path is not set. Please use \"Verifyta().set_verifyta_path(verifyta_path: str)\" to set the path of verifyta."
+     ]
     }
    ],
    "source": [
@@ -352,7 +346,8 @@
     "input_actions = ['input_ball']\n",
     "observe_actions = ['exit1','exit2','exit3']\n",
     "focused_actions = list(set(hidden_actions+input_actions+observe_actions))\n",
-    "pyu.find_a_pattern(model_path, inputs, observations, observe_actions=observe_actions, focused_actions=None, hold=False)"
+    "pyu.find_a_pattern(model_path, inputs, observations, observe_actions=observe_actions, focused_actions=None, hold=False)\n",
+    "pyu.find_all_patterns(model_path,inputs, observations, observe_actions=observe_actions, hold=False, max_patterns = 2)"
    ]
   },
   {
