--- a/docs/source/Quickstart.ipynb
+++ b/docs/source/Quickstart.ipynb
@@ -36,7 +36,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pyuppaal in c:\\python310\\lib\\site-packages (0.1.5)\n",
+      "Requirement already satisfied: pyuppaal in c:\\python310\\lib\\site-packages (0.1.12)\n",
+      "Requirement already satisfied: myst-parser in c:\\python310\\lib\\site-packages (from pyuppaal) (0.18.0)\n",
+      "Requirement already satisfied: jinja2 in c:\\python310\\lib\\site-packages (from myst-parser->pyuppaal) (3.1.2)\n",
+      "Requirement already satisfied: typing-extensions in c:\\python310\\lib\\site-packages (from myst-parser->pyuppaal) (4.3.0)\n",
+      "Requirement already satisfied: docutils<0.19,>=0.15 in c:\\users\\22215\\appdata\\roaming\\python\\python310\\site-packages (from myst-parser->pyuppaal) (0.17.1)\n",
+      "Requirement already satisfied: mdit-py-plugins~=0.3.0 in c:\\python310\\lib\\site-packages (from myst-parser->pyuppaal) (0.3.0)\n",
+      "Requirement already satisfied: sphinx<6,>=4 in c:\\python310\\lib\\site-packages (from myst-parser->pyuppaal) (5.1.1)\n",
+      "Requirement already satisfied: markdown-it-py<3.0.0,>=1.0.0 in c:\\python310\\lib\\site-packages (from myst-parser->pyuppaal) (2.1.0)\n",
+      "Requirement already satisfied: pyyaml in c:\\python310\\lib\\site-packages (from myst-parser->pyuppaal) (6.0)\n",
+      "Requirement already satisfied: mdurl~=0.1 in c:\\python310\\lib\\site-packages (from markdown-it-py<3.0.0,>=1.0.0->myst-parser->pyuppaal) (0.1.2)\n",
+      "Requirement already satisfied: babel>=1.3 in c:\\python310\\lib\\site-packages (from sphinx<6,>=4->myst-parser->pyuppaal) (2.10.3)\n",
+      "Requirement already satisfied: alabaster<0.8,>=0.7 in c:\\python310\\lib\\site-packages (from sphinx<6,>=4->myst-parser->pyuppaal) (0.7.12)\n",
+      "Requirement already satisfied: sphinxcontrib-devhelp in c:\\python310\\lib\\site-packages (from sphinx<6,>=4->myst-parser->pyuppaal) (1.0.2)\n",
+      "Requirement already satisfied: sphinxcontrib-serializinghtml>=1.1.5 in c:\\python310\\lib\\site-packages (from sphinx<6,>=4->myst-parser->pyuppaal) (1.1.5)\n",
+      "Requirement already satisfied: sphinxcontrib-applehelp in c:\\python310\\lib\\site-packages (from sphinx<6,>=4->myst-parser->pyuppaal) (1.0.2)\n",
+      "Requirement already satisfied: sphinxcontrib-qthelp in c:\\python310\\lib\\site-packages (from sphinx<6,>=4->myst-parser->pyuppaal) (1.0.3)\n",
+      "Requirement already satisfied: Pygments>=2.0 in c:\\python310\\lib\\site-packages (from sphinx<6,>=4->myst-parser->pyuppaal) (2.12.0)\n",
+      "Requirement already satisfied: sphinxcontrib-htmlhelp>=2.0.0 in c:\\python310\\lib\\site-packages (from sphinx<6,>=4->myst-parser->pyuppaal) (2.0.0)\n",
+      "Requirement already satisfied: requests>=2.5.0 in c:\\python310\\lib\\site-packages (from sphinx<6,>=4->myst-parser->pyuppaal) (2.28.1)\n",
+      "Requirement already satisfied: imagesize in c:\\python310\\lib\\site-packages (from sphinx<6,>=4->myst-parser->pyuppaal) (1.4.1)\n",
+      "Requirement already satisfied: snowballstemmer>=1.1 in c:\\python310\\lib\\site-packages (from sphinx<6,>=4->myst-parser->pyuppaal) (2.2.0)\n",
+      "Requirement already satisfied: colorama>=0.3.5 in c:\\python310\\lib\\site-packages (from sphinx<6,>=4->myst-parser->pyuppaal) (0.4.5)\n",
+      "Requirement already satisfied: sphinxcontrib-jsmath in c:\\python310\\lib\\site-packages (from sphinx<6,>=4->myst-parser->pyuppaal) (1.0.1)\n",
+      "Requirement already satisfied: packaging in c:\\python310\\lib\\site-packages (from sphinx<6,>=4->myst-parser->pyuppaal) (21.3)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\python310\\lib\\site-packages (from jinja2->myst-parser->pyuppaal) (2.1.1)\n",
+      "Requirement already satisfied: pytz>=2015.7 in c:\\python310\\lib\\site-packages (from babel>=1.3->sphinx<6,>=4->myst-parser->pyuppaal) (2022.1)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\python310\\lib\\site-packages (from requests>=2.5.0->sphinx<6,>=4->myst-parser->pyuppaal) (1.26.11)\n",
+      "Requirement already satisfied: charset-normalizer<3,>=2 in c:\\python310\\lib\\site-packages (from requests>=2.5.0->sphinx<6,>=4->myst-parser->pyuppaal) (2.1.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\python310\\lib\\site-packages (from requests>=2.5.0->sphinx<6,>=4->myst-parser->pyuppaal) (2022.6.15)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\python310\\lib\\site-packages (from requests>=2.5.0->sphinx<6,>=4->myst-parser->pyuppaal) (3.3)\n",
+      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in c:\\python310\\lib\\site-packages (from packaging->sphinx<6,>=4->myst-parser->pyuppaal) (3.0.9)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -99,7 +129,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('set UPPAAL_COMPILE_ONLY=&&C:/Users/22215/OneDrive/Software/UPPAAL/bin-Windows/verifyta.exe -t 1 -X C:\\\\Users\\\\22215\\\\OneDrive\\\\Coding\\\\Github\\\\pyuppaal\\\\src\\\\tests\\\\verifyta_demo1_trace C:\\\\Users\\\\22215\\\\OneDrive\\\\Coding\\\\Github\\\\pyuppaal\\\\src\\\\tests\\\\verifyta_demo1.xml', 'Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1662347315\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\nXMLTrace outputted to: C:\\\\Users\\\\22215\\\\OneDrive\\\\Coding\\\\Github\\\\pyuppaal\\\\src\\\\tests\\\\verifyta_demo1_trace1.xml\\n')]\n"
+      "[('set UPPAAL_COMPILE_ONLY=&&C:/Users/22215/OneDrive/Software/UPPAAL/bin-Windows/verifyta.exe -t 1 -X C:\\\\Users\\\\22215\\\\OneDrive\\\\Coding\\\\Github\\\\pyuppaal\\\\src\\\\tests\\\\verifyta_demo1_trace C:\\\\Users\\\\22215\\\\OneDrive\\\\Coding\\\\Github\\\\pyuppaal\\\\src\\\\tests\\\\verifyta_demo1.xml', 'Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1662373020\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\nXMLTrace outputted to: C:\\\\Users\\\\22215\\\\OneDrive\\\\Coding\\\\Github\\\\pyuppaal\\\\src\\\\tests\\\\verifyta_demo1_trace1.xml\\n')]\n"
      ]
     }
    ],
@@ -165,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +214,7 @@
        "  'exit2'])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +275,7 @@
        "   'exit2'])]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
