--- a/docs/source/Quickstart.ipynb
+++ b/docs/source/Quickstart.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
     }
    ],
    "source": [
-    "model_path = r'C:\\Users\\22215\\OneDrive\\Coding\\Github\\pyuppaal\\src\\tests\\pyuppaal_demo_PipeNet.xml'\n",
+    "model_path = r'C:\\Users\\22215\\OneDrive\\Coding\\Lab\\pyuppaal\\src\\tests\\pyuppaal_demo_PipeNet.xml'\n",
     "# input at 0 and 1000\n",
     "inputs = pyu.TimedActions(actions=['input_ball', 'input_ball'], lb=[0, 1000], ub=[0,1000])\n",
     "# observe at 500 and 1550\n",
