--- a/src/tests/demo.ipynb
+++ b/src/tests/demo.ipynb
@@ -449,18 +449,16 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=====================start now==================\n",
-      "1\n",
-      "[]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[(['E<> (PPedestrian.Crossing and PCar.Crossing)'], ['pGreen', 'pCrss'])]"
+       "[('E<> (PPedestrian.Crossing and PCar.Crossing)',\n",
+       "  ['pCheckLight', 'pRed', 'pCrss', 'cCrss']),\n",
+       " ('E<> (PPedestrian.Crossing and PCar.Crossing) && !Monitor1.pass',\n",
+       "  ['cCrss', 'pCheckLight', 'pRed', 'pCrss']),\n",
+       " ('E<> (PPedestrian.Crossing and PCar.Crossing) && !Monitor1.pass && !Monitor2.pass',\n",
+       "  ['pCheckLight', 'pGreen', 'pCrss', 'cCrss']),\n",
+       " ('E<> (PPedestrian.Crossing and PCar.Crossing) && !Monitor1.pass && !Monitor2.pass && !Monitor3.pass',\n",
+       "  ['pCheckLight', 'pYellow', 'pCrss', 'cCrss'])]"
       ]
      },
      "execution_count": 1,
@@ -475,7 +473,7 @@
     "# pyu.set_verifyta_path(r'D:/Softwares/uppaal64-4.1.25-5/bin-Windows/verifyta.exe')\n",
     "pyu.set_verifyta_path(VERIFYTA_PATH)\n",
     "\n",
-    "umod = pyu.UModel(model_path='Pedestrian.xml') # Set UPPAAL model path and creat an UModel instance.\n",
+    "umod = pyu.UModel(model_path='Pedestrian_new.xml') # Set UPPAAL model path and creat an UModel instance.\n",
     "query = f'E<> (PPedestrian.Crossing and PCar.Crossing)' # property query\n",
     "focused_actions = [\"pCheckLight\", \"pGreen\", \"pRed\", \"pYellow\", \"pCrss\", \"cCrss\"] # focused actions\n",
     "umod.find_all_patterns_with_query(query=query, focused_actions=focused_actions, hold=True)"
@@ -483,24 +481,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "[]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[(['E<> (PPedestrian.Crossing and PCar.Crossing)'], ['pGreen', 'pCrss'])]"
+       "[('E<> (PPedestrian.Crossing and PCar.Crossing)',\n",
+       "  ['pCheckLight', 'pRed', 'pCrss', 'cCrss']),\n",
+       " ('E<> (PPedestrian.Crossing and PCar.Crossing) && !Monitor1.pass',\n",
+       "  ['cCrss', 'pCheckLight', 'pRed', 'pCrss']),\n",
+       " ('E<> (PPedestrian.Crossing and PCar.Crossing) && !Monitor1.pass && !Monitor2.pass',\n",
+       "  ['pCheckLight', 'pGreen', 'pCrss', 'cCrss']),\n",
+       " ('E<> (PPedestrian.Crossing and PCar.Crossing) && !Monitor1.pass && !Monitor2.pass && !Monitor3.pass',\n",
+       "  ['pCheckLight', 'pYellow', 'pCrss', 'cCrss'])]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +510,7 @@
     "\n",
     "pyu.set_verifyta_path(VERIFYTA_PATH)\n",
     "\n",
-    "pyu.find_all_patterns_with_query('Pedestrian.xml',f'E<> (PPedestrian.Crossing and PCar.Crossing)', [\"pCheckLight\", \"pGreen\", \"pRed\", \"pYellow\", \"pCrss\", \"cCrss\"], hold=True)"
+    "pyu.find_all_patterns_with_query('Pedestrian_new.xml',f'E<> (PPedestrian.Crossing and PCar.Crossing)', [\"pCheckLight\", \"pGreen\", \"pRed\", \"pYellow\", \"pCrss\", \"cCrss\"], hold=True)"
    ]
   },
   {
