Add trim for transitions

--- a/src/tests/demo.ipynb
+++ b/src/tests/demo.ipynb
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
        " ['pWantCrss', 'pGreen', 'pCrss', 'cWantCrss', 'cGreen'])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,6 +403,63 @@
     "umod = pyu.UModel(model_path=model_path)\n",
     "query = f'A[] not (LV1Pedestrian2.Crossing and Cars.Crossing)'\n",
     "umod.find_a_pattern_with_query(query=query, focused_actions=None, hold=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "State [0]: ['Cars.Idle', 'TrafficLights.cRed_pGreen', 'LV1Pedestrian2.Idle']\n",
+       "global_variables [0]: [Cars.tCCrssMax=4; Cars.tCCrssMin=1; LV1Pedestrian2.tPCrssMin=0; LV1Pedestrian2.tPCrssMax=10; ]\n",
+       "Clock_constraints [0]: [t(0) - tTL ≤ 0; t(0) - Cars.tc ≤ 0; t(0) - TrafficLights.tTL ≤ 0; t(0) - LV1Pedestrian2.tp ≤ 0; t(0) - LV1Pedestrian2.tTL ≤ 0; tTL - t(0) ≤ 55; tTL - Cars.tc ≤ 0; Cars.tc - TrafficLights.tTL ≤ 0; TrafficLights.tTL - LV1Pedestrian2.tp ≤ 0; LV1Pedestrian2.tp - LV1Pedestrian2.tTL ≤ 0; LV1Pedestrian2.tTL - tTL ≤ 0; ]\n",
+       "transitions [0]: pWantCrss: LV1Pedestrian2 -> ['TrafficLights']\n",
+       "-----------------------------------\n",
+       "State [1]: ['Cars.Idle', 'TrafficLights._id8', 'LV1Pedestrian2.CheckTL']\n",
+       "global_variables [1]: [Cars.tCCrssMax=4; Cars.tCCrssMin=1; LV1Pedestrian2.tPCrssMin=0; LV1Pedestrian2.tPCrssMax=10; ]\n",
+       "Clock_constraints [1]: [t(0) - tTL ≤ 0; t(0) - Cars.tc ≤ 0; t(0) - TrafficLights.tTL ≤ 0; t(0) - LV1Pedestrian2.tp ≤ 0; t(0) - LV1Pedestrian2.tTL ≤ 0; tTL - t(0) ≤ 55; tTL - Cars.tc ≤ 0; Cars.tc - TrafficLights.tTL ≤ 0; TrafficLights.tTL - LV1Pedestrian2.tp ≤ 0; LV1Pedestrian2.tp - LV1Pedestrian2.tTL ≤ 0; LV1Pedestrian2.tTL - tTL ≤ 0; ]\n",
+       "transitions [1]: pGreen: TrafficLights -> ['LV1Pedestrian2']\n",
+       "-----------------------------------\n",
+       "State [2]: ['Cars.Idle', 'TrafficLights.cRed_pGreen', 'LV1Pedestrian2._id27']\n",
+       "global_variables [2]: [Cars.tCCrssMax=4; Cars.tCCrssMin=1; LV1Pedestrian2.tPCrssMin=0; LV1Pedestrian2.tPCrssMax=10; ]\n",
+       "Clock_constraints [2]: [t(0) - tTL ≤ 0; t(0) - Cars.tc ≤ 0; t(0) - TrafficLights.tTL ≤ 0; t(0) - LV1Pedestrian2.tp ≤ 0; t(0) - LV1Pedestrian2.tTL ≤ 0; tTL - t(0) ≤ 55; tTL - Cars.tc ≤ 0; Cars.tc - TrafficLights.tTL ≤ 0; TrafficLights.tTL - LV1Pedestrian2.tp ≤ 0; LV1Pedestrian2.tp - LV1Pedestrian2.tTL ≤ 0; LV1Pedestrian2.tTL - tTL ≤ 0; ]\n",
+       "transitions [2]: pCrss: LV1Pedestrian2 -> ['Cars']\n",
+       "-----------------------------------\n",
+       "State [3]: ['Cars.Idle', 'TrafficLights.cRed_pGreen', 'LV1Pedestrian2.Crossing']\n",
+       "global_variables [3]: [Cars.tCCrssMax=4; Cars.tCCrssMin=1; LV1Pedestrian2.tPCrssMin=0; LV1Pedestrian2.tPCrssMax=10; ]\n",
+       "Clock_constraints [3]: [t(0) - tTL ≤ 0; t(0) - Cars.tc ≤ 0; t(0) - TrafficLights.tTL ≤ 0; t(0) - LV1Pedestrian2.tp ≤ 0; t(0) - LV1Pedestrian2.tTL ≤ 0; tTL - t(0) ≤ 55; tTL - Cars.tc ≤ 0; Cars.tc - TrafficLights.tTL ≤ 0; TrafficLights.tTL - LV1Pedestrian2.tTL ≤ 0; LV1Pedestrian2.tp - t(0) ≤ 10; LV1Pedestrian2.tp - tTL ≤ 0; LV1Pedestrian2.tTL - tTL ≤ 0; ]\n",
+       "transitions [3]: None: TrafficLights.cRed_pGreen -> TrafficLights.cRed_pYellow\n",
+       "-----------------------------------\n",
+       "State [4]: ['Cars.Idle', 'TrafficLights.cRed_pYellow', 'LV1Pedestrian2.Crossing']\n",
+       "global_variables [4]: [Cars.tCCrssMax=4; Cars.tCCrssMin=1; LV1Pedestrian2.tPCrssMin=0; LV1Pedestrian2.tPCrssMax=10; ]\n",
+       "Clock_constraints [4]: [t(0) - tTL ≤ -55; t(0) - Cars.tc ≤ 0; t(0) - TrafficLights.tTL ≤ 0; t(0) - LV1Pedestrian2.tp ≤ 0; t(0) - LV1Pedestrian2.tTL ≤ 0; tTL - t(0) ≤ 60; tTL - Cars.tc ≤ 0; tTL - LV1Pedestrian2.tp ≤ 55; Cars.tc - TrafficLights.tTL ≤ 55; TrafficLights.tTL - LV1Pedestrian2.tTL ≤ -55; LV1Pedestrian2.tp - t(0) ≤ 10; LV1Pedestrian2.tTL - tTL ≤ 0; ]\n",
+       "transitions [4]: None: TrafficLights.cRed_pYellow -> TrafficLights.cGreen_pRed\n",
+       "-----------------------------------\n",
+       "State [5]: ['Cars.Idle', 'TrafficLights.cGreen_pRed', 'LV1Pedestrian2.Crossing']\n",
+       "global_variables [5]: [Cars.tCCrssMax=4; Cars.tCCrssMin=1; LV1Pedestrian2.tPCrssMin=0; LV1Pedestrian2.tPCrssMax=10; ]\n",
+       "Clock_constraints [5]: [t(0) - tTL ≤ -60; t(0) - Cars.tc ≤ 0; t(0) - TrafficLights.tTL ≤ 0; t(0) - LV1Pedestrian2.tp ≤ 0; t(0) - LV1Pedestrian2.tTL ≤ 0; tTL - Cars.tc ≤ 0; tTL - LV1Pedestrian2.tp ≤ 55; Cars.tc - TrafficLights.tTL ≤ 60; TrafficLights.tTL - LV1Pedestrian2.tTL ≤ -60; LV1Pedestrian2.tp - t(0) ≤ 10; LV1Pedestrian2.tTL - tTL ≤ 0; ]\n",
+       "transitions [5]: cWantCrss: Cars -> ['TrafficLights']\n",
+       "-----------------------------------\n",
+       "State [6]: ['Cars.CheckTL', 'TrafficLights._id5', 'LV1Pedestrian2.Crossing']\n",
+       "global_variables [6]: [Cars.tCCrssMax=4; Cars.tCCrssMin=1; LV1Pedestrian2.tPCrssMin=0; LV1Pedestrian2.tPCrssMax=10; ]\n",
+       "Clock_constraints [6]: [t(0) - tTL ≤ -60; t(0) - Cars.tc ≤ 0; t(0) - TrafficLights.tTL ≤ 0; t(0) - LV1Pedestrian2.tp ≤ 0; t(0) - LV1Pedestrian2.tTL ≤ 0; tTL - Cars.tc ≤ 0; tTL - LV1Pedestrian2.tp ≤ 55; Cars.tc - TrafficLights.tTL ≤ 60; TrafficLights.tTL - LV1Pedestrian2.tTL ≤ -60; LV1Pedestrian2.tp - t(0) ≤ 10; LV1Pedestrian2.tTL - tTL ≤ 0; ]\n",
+       "transitions [6]: cGreen: TrafficLights -> ['Cars']\n",
+       "-----------------------------------\n",
+       "State [7]: ['Cars.Crossing', 'TrafficLights.cGreen_pRed', 'LV1Pedestrian2.Crossing']\n",
+       "global_variables [7]: [Cars.tCCrssMax=4; Cars.tCCrssMin=1; LV1Pedestrian2.tPCrssMin=0; LV1Pedestrian2.tPCrssMax=10; ]\n",
+       "Clock_constraints [7]: [t(0) - tTL ≤ 0; t(0) - Cars.tc ≤ 0; t(0) - TrafficLights.tTL ≤ 0; t(0) - LV1Pedestrian2.tp ≤ 0; t(0) - LV1Pedestrian2.tTL ≤ 0; tTL - TrafficLights.tTL ≤ 60; tTL - LV1Pedestrian2.tp ≤ 55; Cars.tc - t(0) ≤ 1; Cars.tc - tTL ≤ -60; TrafficLights.tTL - LV1Pedestrian2.tTL ≤ -60; LV1Pedestrian2.tp - t(0) ≤ 10; LV1Pedestrian2.tTL - tTL ≤ 0; ]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "umod.easy_verify()"
    ]
   },
   {
