--- a/src/tests/demo.ipynb
+++ b/src/tests/demo.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -326,22 +326,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Verifyta path is not set. Please use \"Verifyta().set_verifyta_path(verifyta_path: str)\" to set the path of verifyta.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\22215\\OneDrive\\Coding\\Github\\pyuppaal\\src\\tests\\demo.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 12>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/22215/OneDrive/Coding/Github/pyuppaal/src/tests/demo.ipynb#X13sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m observe_actions \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mexit1\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mexit2\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mexit3\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/22215/OneDrive/Coding/Github/pyuppaal/src/tests/demo.ipynb#X13sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m focused_actions \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mset\u001b[39m(hidden_actions\u001b[39m+\u001b[39minput_actions\u001b[39m+\u001b[39mobserve_actions))\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/22215/OneDrive/Coding/Github/pyuppaal/src/tests/demo.ipynb#X13sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m pyu\u001b[39m.\u001b[39;49mfind_a_pattern(model_path, inputs, observations, observe_actions\u001b[39m=\u001b[39;49mobserve_actions, focused_actions\u001b[39m=\u001b[39;49m\u001b[39mNone\u001b[39;49;00m, hold\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/22215/OneDrive/Coding/Github/pyuppaal/src/tests/demo.ipynb#X13sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m pyu\u001b[39m.\u001b[39mfind_all_patterns(model_path,inputs, observations, observe_actions\u001b[39m=\u001b[39mobserve_actions, hold\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, max_patterns \u001b[39m=\u001b[39m \u001b[39m2\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\pyuppaal\\pyuppaal.py:116\u001b[0m, in \u001b[0;36mfind_a_pattern\u001b[1;34m(model_path, inputs, observes, observe_actions, focused_actions, hold, options)\u001b[0m\n\u001b[0;32m    105\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    106\u001b[0m \u001b[39m:param str model_path: path to the model file\u001b[39;00m\n\u001b[0;32m    107\u001b[0m \u001b[39m:param TimedActions inputs: TimedActions of input signal model\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    113\u001b[0m \u001b[39m:return: query, pattern_seq.actions @yhc SimTrace？\u001b[39;00m\n\u001b[0;32m    114\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    115\u001b[0m u \u001b[39m=\u001b[39m UModel(model_path)\n\u001b[1;32m--> 116\u001b[0m \u001b[39mreturn\u001b[39;00m u\u001b[39m.\u001b[39;49mfind_a_pattern(inputs, observes, observe_actions, focused_actions, hold, options)\n",
-      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\pyuppaal\\umodel.py:390\u001b[0m, in \u001b[0;36mUModel.find_a_pattern\u001b[1;34m(self, inputs, observes, observe_actions, focused_actions, hold, options)\u001b[0m\n\u001b[0;32m    388\u001b[0m new_umodel\u001b[39m.\u001b[39msave()\n\u001b[0;32m    389\u001b[0m \u001b[39m# 获取第0个pattern\u001b[39;00m\n\u001b[1;32m--> 390\u001b[0m Verifyta()\u001b[39m.\u001b[39;49msimple_verify(new_model_path, options\u001b[39m=\u001b[39;49moptions)\n\u001b[0;32m    391\u001b[0m trace_path \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39msplitext(new_model_path)[\u001b[39m0\u001b[39m] \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m-1.xtr\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m    392\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mexists(trace_path):\n",
-      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\pyuppaal\\verifyta.py:27\u001b[0m, in \u001b[0;36mcheck_is_verifyta_path_empty.<locals>.checker_wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     25\u001b[0m error_info \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mVerifyta path is not set.\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     26\u001b[0m error_info \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m Please use \u001b[39m\u001b[39m\"\u001b[39m\u001b[39mVerifyta().set_verifyta_path(verifyta_path: str)\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m to set the path of verifyta.\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m---> 27\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(error_info)\n",
-      "\u001b[1;31mValueError\u001b[0m: Verifyta path is not set. Please use \"Verifyta().set_verifyta_path(verifyta_path: str)\" to set the path of verifyta."
-     ]
+     "data": {
+      "text/plain": [
+       "[(['E<> Monitor0.pass'],\n",
+       "  ['input_ball',\n",
+       "   'input_ball',\n",
+       "   'hidden_path1',\n",
+       "   'hidden_path3',\n",
+       "   'exit1',\n",
+       "   'input_ball',\n",
+       "   'input_ball',\n",
+       "   'hidden_path1',\n",
+       "   'hidden_path4',\n",
+       "   'exit2']),\n",
+       " ('E<> Monitor0.pass && !Monitor1.pass',\n",
+       "  ['input_ball',\n",
+       "   'input_ball',\n",
+       "   'hidden_path1',\n",
+       "   'hidden_path3',\n",
+       "   'exit1',\n",
+       "   'input_ball',\n",
+       "   'input_ball',\n",
+       "   'hidden_path2',\n",
+       "   'hidden_path5',\n",
+       "   'exit2'])]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -369,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +410,7 @@
        " ['pWantCrss', 'pGreen', 'pCrss', 'cWantCrss', 'cGreen'])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +470,7 @@
        "Clock_constraints [7]: [t(0) - tTL ≤ 0; t(0) - Cars.tc ≤ 0; t(0) - TrafficLights.tTL ≤ 0; t(0) - LV1Pedestrian2.tp ≤ 0; t(0) - LV1Pedestrian2.tTL ≤ 0; tTL - TrafficLights.tTL ≤ 60; tTL - LV1Pedestrian2.tp ≤ 55; Cars.tc - t(0) ≤ 1; Cars.tc - tTL ≤ -60; TrafficLights.tTL - LV1Pedestrian2.tTL ≤ -60; LV1Pedestrian2.tp - t(0) ≤ 10; LV1Pedestrian2.tTL - tTL ≤ 0; ]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,33 +481,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['pYellow',\n",
-       " 'pGreen',\n",
-       " 'cCheckLight',\n",
-       " 'cRed',\n",
-       " 'pCrss',\n",
-       " 'cCrss',\n",
+       "['cGreen',\n",
+       " 'pRed',\n",
+       " 'pWantCrss',\n",
        " 'cYellow',\n",
+       " 'cRed',\n",
+       " 'pGreen',\n",
        " 'pFinish',\n",
-       " 'cGreen',\n",
-       " 'pCheckLight',\n",
-       " 'pRed']"
+       " 'cWantCrss',\n",
+       " 'pCrss',\n",
+       " 'pYellow']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# test get_broadcast_chan\n",
-    "umod.get_broadcast_chan()"
+    "umod.broadcast_chan"
    ]
   },
   {
@@ -717,36 +733,6 @@
     "1. boardcast chan 需要设置在declarations里，如果设置在system里，会导致创建的monitor中的chan无法识别。\n",
     "2. add_system函数是简单的在system的末尾追加新的monitor名称，如果system的末尾是注释或其他则回出错"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9\n",
-      "9\n"
-     ]
-    }
-   ],
-   "source": [
-    "class A:\n",
-    "    def __init__(self, x = 6) -> None:\n",
-    "        self.__a = x\n",
-    "\n",
-    "    def __test(self):\n",
-    "        b = A(9)\n",
-    "        print(b.__a)\n",
-    "\n",
-    "dir(A)\n",
-    "a = A()\n",
-    "a._A__test()\n",
-    "a._A__a = 7\n",
-    "a._A__test()\n"
-   ]
   }
  ],
  "metadata": {
@@ -770,7 +756,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "56566df51fada5dbe94783a4cf73a4d7ff5e19d113ce2a7b25aa204aee2829c7"
+    "hash": "6fa50c061a415680ce538d89e75df30fdfe2bc1ddb09ff5a8bde46f7d7507344"
    }
   }
  },
